Fix the css for <CountryCards/> and <CountryDetails/>
i add line-clamp which i saw in a video before to stop
the cards from being too long because of their row
sibling has a huge name

i also fixed the grid for <countryDetails/> info list
to make it fit better

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -44,6 +44,8 @@ main {
   &.dark {
     @include themeGenerator($themes, "darkTheme");
   }
+padding-bottom: 50px;
+
 }
 
 .search-bar,
