--- a/src/routes/CountryDetails/assets/scss/CountryDetails.scss
+++ b/src/routes/CountryDetails/assets/scss/CountryDetails.scss
@@ -15,7 +15,9 @@
 .country {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-auto-rows: fit-content;
   align-items: center;
+  align-content: center;
   gap: 50px;
 
   margin-bottom: 50px;
@@ -34,12 +36,11 @@
   }
   @include element("info-list") {
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    gap: 10px;
-    grid-auto-flow: column;
+    grid-template-columns: repeat(2,1fr);
+    row-gap: 20px;
+    column-gap: 10px;
     @media (max-width: 810px) {
-      grid-template-rows: initial;
-      grid-auto-flow: row;
+     grid-template-columns: 1fr;
     }
   }
   @include element("info-item") {
@@ -51,13 +52,13 @@
 }
 
 #country-borders{
-  grid-column:-2/-1;
-  grid-row: -2/-1;
+  grid-column: 1/-1;
 }
+
 .border-btn{
   @include reset-btn-style(var(--ElementBG));
   color: var(--TextColor);
   @include widther(95px);
   padding: 5px;
-  margin-right: 5px;
+  margin: 3px;
 }
